--- a/index.css
+++ b/index.css
@@ -1,1 +1,12 @@
+#header{
+    width: auto;
+    height: 35px;
+    background-color: violet;
+    display: flex;
+    gap: 10px;
+}
 
+body{
+    margin: 0;
+
+}
