--- a/index.css
+++ b/index.css
@@ -1,7 +1,7 @@
 #header{
     width: auto;
     height: 35px;
-    background-color: violet;
+    background-color: #976bb0;
     display: flex;
     gap: 10px;
 }
